fix: overflow-x and login

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
-  @apply bg-gradient-to-r from-[#d9e4eb] to-[#f1f7fb];
-} */
+body {
+  overflow-x: hidden;
+  /* @apply bg-gradient-to-r from-[#d9e4eb] to-[#f1f7fb]; */
+} 
 
 .bg-gray-gradient {
   @apply bg-gradient-to-t from-[#bcd4f7] to-[#eaf4ff]
